# hifir4py

./: .buildinfo  .gitignore  .gitmodules  .pylintrc  CHANGELOG.rst  MANIFEST.in  README.rst  conf.py  genindex.html  hif_api.html  index.html  ksp_api.html  manylinux-build.sh  objects.inv  py-modindex.html  pypi.sh  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: python-app.yml
_modules/: index.html
_modules/hifir4py/: hif.html
_sources/: index.rst.txt
_sources/demos/: demo_pipit.rst.txt
demos/: demo_apply.html  demo_gmres.html  demo_pipit.html  demo_scipy.html
docs/: api.rst  conf.py  eg.rst  hif_api.rst  index.rst  ksp_api.rst  requirements.txt
docs/_templates/: hifir4py_autosummary.rst
docs/apis/: core.rst  (+2 more)
examples/: demo.ipynb  demo_apply.ipynb  demo_gmres.ipynb  demo_opts.ipynb  demo_pipit.ipynb  demo_scipy copy.ipynb  demo_scipy.ipynb
hifir4py/: __init__.pxd  __init__.py  _hifir4py.pxd  _hifir4py.pyx  _hilucsi4py.pxd  _hilucsi4py.pyx  file_dp.pyx  hif.py  hifir4py.hpp  hifir4py_nsp.hpp  hilucsi4py_nsp.hpp  libhifir.pxd  utils.py
hilucsi4py/: __init__.pxd  __init__.py  _hilucsi4py.pxd  _hilucsi4py.pyx  file_dp.pyx  hilucsi4py.hpp  libhilucsi.pxd  utils.py
tests/: singular.mat  test_bicgstab.py  test_create_ksp.py  test_fgmres.py  test_fgmres_mixed.py  test_fqmrcgstab.py  test_fqmrcgstab_mixed.py  test_gmres_hif.py  test_mixed.py  test_multiply.py  test_pars.py  test_random.py  test_refactor.py  test_singular.py  test_singular_callback.py  test_tgmresr.py  test_tgmresr_mixed.py
wheels/: build.sh
(+27 files in other folders)
