[metadata]
name = hifir4py
version = 0.1.0
author = NumGeom Group at Stony Brook University
description = HIFIR Python3 Interface
long-description = file: README.rst
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: C++
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Operating System :: POSIX
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)

[options]
setup_requires =
    setuptools
install_requires =
    Cython
    numpy
    scipy >= 1.5.1
python_requires = >= 3.6
include_package_data = True
packages=find:

[flake8]
ignore =
    E226
    W503
    W504
    E203
max-line-length = 120
split_before_arithmetic_operator = true
exclude = tests/*
max-complexity = 12
